[package]
authors = ["Seong Hoon Wee <mrgravity817@gmail.com>"]
edition = "2018"
name = "async_future"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
hyper = "0.12"
hyper-staticfile = "0.3"
lazy_static = "1.0"
rand = "0.5"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
