[package]
authors = ["Seong Hoon Wee <mrgravity817@gmail.com>"]
edition = "2018"
name = "hyper-microservice"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
hyper = "0.12"
lazy_static = "1.0"
regex = "1.0"
slab = "0.4"
