[package]
authors = ["Seong Hoon Wee <mrgravity817@gmail.com>"]
edition = "2018"
name = "reactive_rpc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
failure = "0.1"
grpc = {git = "https://github.com/stepancheg/grpc-rust"}
log = "0.4"
protobuf = "2.2"

[build-dependencies]
protoc-rust-grpc = {git = "https://github.com/stepancheg/grpc-rust"}

[[bin]]
name = "grpc-ring"
path = "src/server.rs"
test = false

[[bin]]
name = "grpc-ring-client"
path = "src/client.rs"
test = false
